# Lexis

./: .gitignore  .gitsubprojects  .travis.yml  CMakeLists.txt  README.md
CMake/: CPackConfig.cmake
apps/: CMakeLists.txt  event_script_sample  progressMonitor.cpp  sendevent.cpp
doc/: Changelog.md
doc/feature/: colorMaps.md  feature.md
lexis/: CMakeLists.txt  request.fbs
lexis/data/: Progress.cpp  Progress.h  cellSetBinaryOp.fbs  frameRange.fbs  progress.fbs  selections.fbs
lexis/qt/: CMakeLists.txt
lexis/render/: ClipPlanes.cpp  ClipPlanes.h  ColorMap.cpp  ColorMap.h  ColorMap.ipp  Histogram.cpp  Histogram.h  clipPlanes.fbs  colorMap.fbs  colorMaps.fbs  exit.fbs  frame.fbs  histogram.fbs  imageJPEG.fbs  lookOut.fbs  lookupTable1D.fbs  materialLUT.fbs  stream.fbs  viewHistogram.fbs  viewport.fbs
tests/: CMakeLists.txt
tests/data/: progress.cpp
tests/render/: clipPlanes.cpp  colorMap.cpp  colorMap.h  histogram.cpp  imageJPEG.cpp
